MET-6343 General cleanup